# warp

./: Cargo.toml
app/: Cargo.toml
app/src/ai/agent_sdk/: driver.rs
app/src/ai/blocklist/: history_model.rs
app/src/ai/blocklist/agent_view/agent_input_footer/: mod.rs
app/src/ai/blocklist/block/: status_bar.rs
app/src/terminal/: input.rs
app/src/terminal/cli_agent_sessions/: ipc.rs  ipc_tests.rs  mod.rs  mod_tests.rs
app/src/terminal/local_tty/: terminal_manager.rs
app/src/terminal/model/ansi/: mod.rs  mod_tests.rs
app/src/terminal/view/ambient_agent/: mod.rs
app/src/workspace/: action.rs  view.rs  view_test.rs
crates/warp_terminal/src/model/grid/flat_storage/: index.rs  index_tests.rs
fuzz/: Cargo.toml
fuzz/corpus/fuzz_ansi_parser/: boundary  csi_clear  csi_private  csi_sgr  csi_truecolor  osc_title
fuzz/fuzz_targets/: fuzz_ansi_parser.rs
script/linux/: bundle  bundle_install
script/macos/: bundle
script/windows/: bundle.ps1
